--- a/servicio-item-dev.properties
+++ b/servicio-item-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=configurando ambiente desarrollo
 configuracion.nombre.desarrollador=jose
-configuracion.email.desarrollador=jose
+configuracion.email.desarrollador=jose@gmail.com
