--- a/servicio-item-dev.properties
+++ b/servicio-item-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=configurando ambiente desarrollo
-configuracion.nombre.desarrollador=jose
-configuracion.email.desarrollador=jose@gmail.com
+configuracion.texto=configurando entorno  desarrollo
+configuracion.nombre.desarrollador=jose-richard
+configuracion.email.desarrollador=jose-richard@gmail.com
