--- a/servicio-item-dev.properties
+++ b/servicio-item-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=configurando entorno  desarrollo
-configuracion.nombre.desarrollador=joserichard
-configuracion.email.desarrollador=joserichard@gmail.com
+configuracion.nombre.desarrollador=jose-richard-peredo
+configuracion.email.desarrollador=jose.richard.peredo@gmail.com
